--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Kevin Joy # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: "/images/IMG-20181018-WA0002.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Data science enthusiast
   <br><br>
